Se agrega un canvas y un color-picker entre otras cosas

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trabajo practico 1 - Pedro Chatelain</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    
+    <canvas class="js-my-canvas my-canvas"></canvas>
+    <input class="js-color-picker" type="color" value="#000000"/>
+    <input type="range" class="js-line-range" min="1" max="72" value="1">
+    <label class="js-range-value">1</label>Px
+    <script src="tp1.js"></script>
 </body>
 </html>
