Se agrega lapiz y color-picker con su respectiva funcionalidad. Se cambia el tamano del canvas

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo practico 1 - Pedro Chatelain</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <!-- <link rel="stylesheet" href="stylesheet.css"> -->
 </head>
 <body>
-    <canvas class="js-my-canvas my-canvas"></canvas>
+    <canvas class="js-my-canvas my-canvas" width="800px" height="600px"> </canvas>
     <input class="js-color-picker" type="color" value="#000000"/>
     <input type="range" class="js-line-range" min="1" max="72" value="1">
     <label class="js-range-value">1</label>Px
