--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -8,22 +8,31 @@
 </head>
 <body>
     <canvas class="js-my-canvas my-canvas" width="800px" height="600px"> </canvas>
-    <div class="tool-bar">
-        <p>Lápiz</p>
-        <button class="js-lapiz tool-button pressed-button">
-            <img src="penIcon.png" alt="" srcset="">
-        </button>
-        <p>Color</p>
-        <input class="js-color-picker color-picker tool-button" type="color" value="#ee1111"/>
-        <p>Goma</p>
-        <button class="tool-button js-goma">
-            <img src="eraserIcon.png" alt="" srcset="">
-        </button>
-        <p id="size-of-tool">Size (<span>1</span> px)</p>
-        <div class="tool-size">
-            <input type="range" class="js-line-range" min="1" max="80" value="1">
-            <label class="js-range-value"></label> 
+    <div class="herramientas">
+        <div class="tool-bar">
+            <p>Lápiz</p>
+            <button class="js-lapiz tool-button pressed-button">
+                <img src="penIcon.png" alt="" srcset="">
+            </button>
+            <p>Color</p>
+            <input class="js-color-picker color-picker tool-button" type="color" value="#ee1111"/>
+            <p>Goma</p>
+            <button class="tool-button js-goma">
+                <img src="eraserIcon.png" alt="" srcset="">
+            </button>
+            <p id="size-of-tool">Size (<span>1</span> px)</p>
+            <div class="tool-size">
+                <input type="range" class="js-line-range" min="1" max="80" value="1">
+                <label class="js-range-value"></label> 
+            </div>
         </div>
+        <div class="image-buttons-bar">
+            <input type="file" class="js-input-select-image input-select-image" accept=".jpg,.jpeg,.bmp,.webp,.tiff,.psd">
+            <button class="js-btn-select-image btn-select-image">Seleccionar imagen</button>
+            <button class="js-save-img">Guardar imagen</button>
+            <button class="js-delete-img">Descartar imagen</button>
+            
+        </div>    
     </div>
     <script src="tp1.js"></script>
 </body>
