Se agrega filtro negativo

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -27,12 +27,15 @@
             </div>
         </div>
         <div class="image-buttons-bar">
-            <input type="file" class="js-input-select-image input-select-image" accept=".jpg,.jpeg,.bmp,.webp,.tiff,.psd">
+            <input type="file" class="js-input-select-image input-select-image" accept=".jpg,.jpeg,.bmp,.webp,.tiff,.psd,.svg">
             <button class="js-btn-select-image btn-select-image">Seleccionar imagen</button>
             <button class="js-save-img">Guardar imagen</button>
             <button class="js-delete-img">Descartar imagen</button>
-            
-        </div>    
+        </div>
+        <div class="filtros">
+            <button class="js-filtro-negativo">Negativo</button>
+        </div>
+        <canvas class="js-canvas-imagen-original canvas-imagen-original"></canvas>
     </div>
     <script src="tp1.js"></script>
 </body>
