Se agrega filtro de brillo, se reordenan archivos .js, se oculta canvas

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -34,9 +34,12 @@
         </div>
         <div class="filtros">
             <button class="js-filtro-negativo">Negativo</button>
+            <button class="js-filtro-brillo">Brillo</button>
         </div>
         <canvas class="js-canvas-imagen-original canvas-imagen-original"></canvas>
     </div>
-    <script src="tp1.js"></script>
+    <script src="js/tp1.js"></script>
+    <script src="js/filtros.js"></script>
+    <script src="js/color_converters.js"></script>
 </body>
 </html>
