Se agrega filtro grayscale

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -35,6 +35,7 @@
         <div class="filtros">
             <button class="js-filtro-negativo">Negativo</button>
             <button class="js-filtro-brillo">Brillo</button>
+            <button class="js-filtro-grayscale">Grayscale</button>
         </div>
         <canvas class="js-canvas-imagen-original canvas-imagen-original"></canvas>
     </div>
