Se agrega filtro sepia

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -36,6 +36,7 @@
             <button class="js-filtro-negativo">Negativo</button>
             <button class="js-filtro-brillo">Brillo</button>
             <button class="js-filtro-grayscale">Grayscale</button>
+            <button class="js-filtro-sepia">Sepia</button>
         </div>
         <canvas class="js-canvas-imagen-original canvas-imagen-original"></canvas>
     </div>
