Se modifica el codigo para mejor lectura y se agrega un archivo de texto con cosas para arreglar

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -26,6 +26,8 @@
                 <label class="js-range-value"></label> 
             </div>
         </div>
+        <div class="loader"></div>
+
         <div class="image-buttons-bar">
             <input type="file" class="js-input-select-image input-select-image" accept=".jpg,.jpeg,.bmp,.webp,.tiff,.psd,.svg">
             <button class="js-btn-select-image btn-select-image">Seleccionar imagen</button>
@@ -41,7 +43,7 @@
         <canvas class="js-canvas-invisible canvas-invisible"></canvas>
     </div>
     <script src="js/main.js"></script>
-    <script src="js/filtros.js"></script>
+    <script src="js/filtro.js"></script>
     <script src="js/color_converters.js"></script>
     <script src="js/imagen.js"></script>
     <script src="js/dibujo.js"></script>
