Agrega filtro deteccion de bordes

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -45,6 +45,7 @@
             <button class="js-filtro-brillo">Brillo</button>
             <button class="js-filtro-grayscale">Grayscale</button>
             <button class="js-filtro-sepia">Sepia</button>
+            <button class="js-filtro-sobel">sobel</button>
         </div>
         <canvas class="js-canvas-invisible canvas-invisible"></canvas>
     </div>
@@ -55,5 +56,6 @@
     <script src="js/color_converters.js"></script>
     <script src="js/imagen.js"></script>
     <script src="js/dibujo.js"></script>
+    <script src="js/sobel.js"></script>
 </body>
 </html>
