--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -9,10 +9,6 @@
 <body>
     <div id="canvas-wrap">
         <canvas class="js-my-canvas my-canvas" width="800px" height="600px"> </canvas>
-        <div class="loading loading-invisible">
-            <p>Loading</p>
-            <div class="loader"></div>
-        </div>
     </div>
         
     <div class="herramientas">
@@ -45,7 +41,9 @@
             <button class="js-filtro-brillo">Brillo</button>
             <button class="js-filtro-grayscale">Grayscale</button>
             <button class="js-filtro-sepia">Sepia</button>
-            <button class="js-filtro-sobel">sobel</button>
+            <button class="js-filtro-bordes">Deteccion de bordes</button>
+            <button class="js-filtro-blur">Blur</button>
+            <button class="js-filtro-sharpen">Nitidez</button>
         </div>
         <canvas class="js-canvas-invisible canvas-invisible"></canvas>
     </div>
