Corrige bug de filtros

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -41,17 +41,17 @@
             <div class="dropdown">
                 <button class="dropbtn">Filtros para imagen</button>
                 <div class="dropdown-content">
+                    <a class="js-filtro-none" href="#">Ninguno</a>
                   <a class="js-filtro-negativo" href="#">Negativo</a>
-                  <a class="js-filtro-brillo" href="#">Brillo</a>
                   <a class="js-filtro-grayscale" href="#">Grayscale</a>
                   <a class="js-filtro-sepia" href="#">Sepia</a>
+                  <a class="js-filtro-brillo" href="#">Brillo</a>
                   <a class="js-filtro-bordes" href="#">Detección de bordes</a>
                   <a class="js-filtro-blur" href="#">Blur</a>
                   <a class="js-filtro-sharpen" href="#">Nitidez</a>
                 </div>
             </div>
         </div>
-        
         
         <canvas class="js-canvas-invisible canvas-invisible"></canvas>
 
