Se crea clase Ficha. Se permite moverlas

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -12,7 +12,10 @@
     
     <canvas class="js-img"></canvas>
 
+    <script src="js/Juego.js"></script>
+    <script src="js/Ficha.js"></script>
     <script src="js/Tablero.js"></script>
+    <script src="js/Main.js"></script>
 
 </body>
 </html>
