Se permite mover la ficha. Tablero fijo

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 
-    <canvas class="js-canvas canvas" width="1200px" height="600px"> </canvas>
+    <div class="canvas-holder">
+        <canvas class="js-canvas canvas" width="1200px" height="600px" > </canvas>
+        <canvas class="js-canvas-tablero canvas-tablero" width="1200px" height="600px"> </canvas>
+
+    </div>
+
     
-    <canvas class="js-img"></canvas>
+    <canvas class="js-img" style="display: none;"></canvas>
 
     <script src="js/Juego.js"></script>
     <script src="js/Ficha.js"></script>
