Refactor. Crea clase Celda

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -9,14 +9,12 @@
 <body>
 
     <div class="canvas-holder">
-        <canvas class="js-canvas canvas" width="1200px" height="600px" > </canvas>
+        <canvas class="js-canvas canvas" width="1200px" height="600px"> </canvas>
         <canvas class="js-canvas-tablero canvas-tablero" width="1200px" height="600px"> </canvas>
 
     </div>
 
-    
-    <canvas class="js-img" style="display: none;"></canvas>
-
+    <script src="js/Celda.js"></script>
     <script src="js/Juego.js"></script>
     <script src="js/Ficha.js"></script>
     <script src="js/Tablero.js"></script>
