--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="stylesheet.css">    
 </head>
 <body>
-
     <div class="canvas-holder">
+        <p class="js-parrafo-turno turno hidden">Es el turno de <span class="js-turno"></span></p>
         <canvas class="js-canvas canvas" width="1000px" height="500px"> </canvas>
         <canvas class="js-canvas-tablero canvas-tablero" width="1000px" height="500px"> </canvas>
-        <canvas class="canvas-background" width="1000px" height="500px"> </canvas>
     </div>
 
     <!-- Trigger/Open The Modal -->
@@ -26,7 +25,7 @@
     <select class="js-dimensiones">
         <option value="6x7">6x7</option>
         <option value="6x8">6x8</option>
-        <option value="7x7">7x7</option>
+        <option value="7x8">7x7</option>
         <option value="7x9">7x9</option>
       </select>
   </div>
