fix bug ficha (cuando se mueve por primera vez)

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -13,7 +13,6 @@
         <canvas class="js-canvas canvas"  width="1000px" height="500px"> </canvas>
         <canvas class="js-canvas-tablero canvas-tablero"  width="1000px" height="500px"> </canvas>
     </div>
-
     <div class="js-intro presentacion-juego">
         <h1 class="titulo-juego">4 en línea</h1>
         <div class="separador"></div>
@@ -34,12 +33,12 @@
         </select>
         <button class="js-btn-jugar btn-jugar">Jugar!</button>
     </div>
-
+    <img src="img/red_disc.png" class="hidden">
+    <img src="img/blue_disc.jpg" class="hidden">
     <script src="js/Celda.js"></script>
     <script src="js/Juego.js"></script>
     <script src="js/Ficha.js"></script>
     <script src="js/Tablero.js"></script>
     <script src="js/Main.js"></script>
-
 </body>
 </html>
