agrega countdown lanzamiento pelicula

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dune</title>
-    <link rel="stylesheet" href="stylesheet.css">    
+    <link rel="stylesheet" href="css/stylesheet.css">    
 </head>
 <body>
     <section class="js-hero hero">
@@ -18,8 +18,29 @@
         <div class="js-card card"></div>
     </section>
     <div class="division"></div>
-    <div class="division"></div>
-
+    <!-- <div class="division"></div> -->
+    <section class="js-countdown countdown">
+        <p class="faltan">faltan</p>
+        <div class="days">
+            <div><span class="js-days"></span></div>
+            <p>días</p>
+        </div>
+        <div class="hours">
+            <div class="js-hours"></div>
+            <p>horas</p>
+        </div>
+        <div class="minutes">
+            <div class="js-minutes"></div>
+            <p>minutos</p>
+        </div>
+        <div class="seconds">
+            <div class="js-seconds"></div>
+            <p>segundos</p>
+        </div>
+        <p class="paraEstreno">para el estreno</p>
+    </section>
+    <!-- <div class="number-card">1</div> -->
     <script src="js/main.js"></script>
+    <script src="js/countdown.js"></script>
 </body>
 </html>
