anima la entrada del countdown

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -17,9 +17,9 @@
         <div class="js-card card"></div>
         <div class="js-card card"></div>
     </section>
-    <div class="division"></div>
     <!-- <div class="division"></div> -->
-    <section class="js-countdown countdown">
+    <!-- <div class="division"></div> -->
+    <section class="js-countdown countdown no-opacity">
         <p class="faltan">faltan</p>
         <div class="days">
             <div><span class="js-days"></span></div>
