Implementa carousel (solo estetica)

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -17,8 +17,7 @@
         <div class="js-card card"></div>
         <div class="js-card card"></div>
     </section>
-    <!-- <div class="division"></div> -->
-    <!-- <div class="division"></div> -->
+    <div class="division"></div>
     <section class="js-countdown countdown no-opacity">
         <p class="faltan">faltan</p>
         <div class="days">
@@ -39,8 +38,14 @@
         </div>
         <p class="paraEstreno">para el estreno</p>
     </section>
-    <!-- <div class="number-card">1</div> -->
+    <div class="division"></div>
+    <section class="carousel">
+        <div class="js-left-arrow left-arrow"></div>
+        <div class="js-right-arrow right-arrow"></div>
+    </section>
+    <div class="division"></div>
     <script src="js/main.js"></script>
     <script src="js/countdown.js"></script>
+    <script src="js/carousel.js"></script>
 </body>
 </html>
