anima entrada carousel y le da funcionalidad

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dune</title>
+    <title>The Lord of the Rings</title>
     <link rel="stylesheet" href="css/stylesheet.css">    
 </head>
 <body>
@@ -22,24 +22,34 @@
         <p class="faltan">faltan</p>
         <div class="days">
             <div><span class="js-days"></span></div>
-            <p>días</p>
+            <p class="p-time">días</p>
         </div>
         <div class="hours">
             <div class="js-hours"></div>
-            <p>horas</p>
+            <p class="p-time">horas</p>
         </div>
         <div class="minutes">
             <div class="js-minutes"></div>
-            <p>minutos</p>
+            <p class="p-time">minutos</p>
         </div>
         <div class="seconds">
             <div class="js-seconds"></div>
-            <p>segundos</p>
+            <p class="p-time">segundos</p>
         </div>
         <p class="paraEstreno">para el estreno</p>
     </section>
     <div class="division"></div>
-    <section class="carousel">
+    <section class="js-carousel carousel no-opacity">
+        <div class="js-carousel-slide carousel-slide">
+            <img class="js-image image" id="js-last-clone" src="images/rings6.jpg">
+            <img class="js-image image" src="images/rings1.jpg">
+            <img class="js-image image" src="images/rings2.jpg">
+            <img class="js-image image" src="images/rings3.jpg">
+            <img class="js-image image" src="images/rings4.jpg">
+            <img class="js-image image" src="images/rings5.jpg">
+            <img class="js-image image" src="images/rings6.jpg">
+            <img class="js-image image" id="js-first-clone" src="images/rings1.jpg">
+        </div>
         <div class="js-left-arrow left-arrow"></div>
         <div class="js-right-arrow right-arrow"></div>
     </section>
