implementa navbar y calendario de eventos

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Lord of the Rings</title>
+    <title>The Lord of the Rings - Home</title>
     <link rel="stylesheet" href="css/stylesheet.css">    
 </head>
 <body>
     <section class="js-hero hero">
+        <nav class="js-nav opacity-animation">
+            <p class="js-home home">home</p>
+            <p class="js-calendario calendario">calendario</p>
+            <p class="formulario">formulario</p>
+        </nav>
         <div class="js-clouds clouds add-clouds"></div>
         <div class="js-movie-title movie-title opacity-animation"></div>
         <div class="js-movie-characters movie-characters opacity-animation"></div>
