--- a/TP3/EntregaFinal/calendario.html
+++ b/TP3/EntregaFinal/calendario.html
@@ -11,12 +11,12 @@
         <nav class="js-nav opacity-animation">
             <p class="js-home home">home</p>
             <p class="js-calendario calendario">calendario</p>
-            <p class="formulario">formulario</p>
+            <p class="js-formulario formulario">formulario</p>
         </nav>
         <div class="js-movie-title movie-title opacity-animation"></div>
         <!-- <div class="js-clouds clouds add-clouds"></div> -->
     </section>
-    <section class="accordion">
+    <section class="accordion opacity-animation">
         <section class="evento primer-evento">
             <button> evento 1 <img src="images/plus.png" width="18"></button>
             <div class="panel">
