--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -11,7 +11,7 @@
         <nav class="js-nav opacity-animation">
             <p class="js-home home">home</p>
             <p class="js-calendario calendario">calendario</p>
-            <p class="formulario">formulario</p>
+            <p class="js-formulario formulario">formulario</p>
         </nav>
         <div class="js-clouds clouds add-clouds"></div>
         <div class="js-movie-title movie-title opacity-animation"></div>
